[package]
name = "pest_string"
version = "0.1.0"
authors = ["Gjn"]
edition = "2018"
license = "MIT"
description = "String parser"
homepage = "https://example.com"
repository = "https://github.com/pest"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]